update makefile and test files

--- a/comma-separated-values/GNUmakefile
+++ b/comma-separated-values/GNUmakefile
@@ -1,11 +1,11 @@
 #OBJS= csv.tab.o hand-lex.o
 #OBJS= csv.tab.o lex.yy.o hand-lex.o
-OBJS= csv.tab.o lex.yy.o
-OBJ2S= csv.tab.o csv2-lex.yy.o
+OBJS= ../build/csv.tab.o ../build/lex.yy.o
+OBJ2S= ../build/csv.tab.o ../build/csv2-lex.yy.o
 SRC=csv.y csv2-lex.l
 CC=g++ -g -O2 -std=c++11
 
-csv2_ubuntu.exe: $(OBJ2S) $(SRC)
+../build/csv2_ubuntu.exe: $(OBJ2S) $(SRC)
 	$(CC) -o $@ $(OBJ2S) 
 
 csv2_ubuntu-localise.exe: $(OBJ2S) $(SRC)
@@ -16,13 +16,13 @@ csv2_ubuntu-localise.exe: $(OBJ2S) $(SRC)
 csv.exe: $(OBJS)
 	$(CC) -o $@ $(OBJS) 
 
-csv.tab.o: csv.tab.c csv.tab.h
-	$(CC) -std=c++11 -I. -c $<
+../build/csv.tab.o: csv.tab.c csv.tab.h
+	$(CC) -std=c++11 -I. -c $< -o $@
 
 # hand-lex.o: hand-lex.c calc.h csv.tab.h
 # 	gcc -c $<
 
-lex.yy.o: lex.yy.c  csv.tab.h lex.l
+../build/lex.yy.o: lex.yy.c  csv.tab.h lex.l
 	$(CC) -c $<
 
 lex.yy.c: lex.l  csv.tab.h  GNUmakefile
@@ -36,8 +36,8 @@ csv2-lex.yy.c: csv2-lex.l
 	flex --backup -o $@ $<
 
 
-csv2-lex.yy.o: csv2-lex.yy.c  csv.tab.h csv2-lex.l
-	$(CC) -c $<
+../build/csv2-lex.yy.o: csv2-lex.yy.c  csv.tab.h csv2-lex.l
+	$(CC) -c $< -o $@
 
 valgrind_check: csv2.exe
 	valgrind ./csv2.exe --leak-check=full <  csv-test-files/inp1.csv || echo "install valgrind and then run this"
